--- a/beyond.html
+++ b/beyond.html
@@ -23,43 +23,35 @@
     <h2>Life Beyond the Code</h2>
     <p>In addition to my work in technology, I actively serve as a Youth Leader at <strong>The Salvation Army, Mdantsane Corps</strong>. This role has provided me with meaningful leadership and community engagement experiences.</p>
 
-    <div class="projects-grid">
+    <section class="beyond-cards">
       <div class="card">
-        <img src="assets/LocalOfficers Workshop.jpg" alt="LocalOfficers Workshop" />
+        <img src="assets/LocalOfficers Workshop.jpg" alt="Local Officers Workshop">
         <h3>Local Officers Workshop</h3>
-        <p>I attended a local officers workshop, gaining leadership and service insights within the church community.</p>
-        <div class="links">
-          <a href="https://www.facebook.com/100066607274501/posts/997186049178295/?mibextid=rS40aB7S9Ucbxw6v" target="_blank" rel="noopener noreferrer">View Post</a>
-        </div>
+        <p>Attended a local officers workshop, gaining leadership and service insights within the church community.</p>
+        <a href="https://www.facebook.com/100066607274501/posts/997186049178295/?mibextid=rS40aB7S9Ucbxw6v" target="_blank" class="btn">View Post</a>
       </div>
 
       <div class="card">
-        <img src="assets/Bible Study Session.jpg" alt="Bible Study Session" />
+        <img src="assets/Bible Study Session.jpg" alt="Bible Study Session">
         <h3>Bible Study Session</h3>
-        <p>Leading a session focused on empowering young people through faith and community support.</p>
-        <div class="links"> 
-   <a href="https://www.facebook.com/100066607274501/posts/1016780240552209/?mibextid=rS40aB7S9Ucbxw6v" target="_blank" rel="noopener noreferrer">View Post</a>
-        </div>
+        <p>Led a session focused on empowering young people through faith and community support.</p>
+        <a href="https://www.facebook.com/100066607274501/posts/1016780240552209/?mibextid=rS40aB7S9Ucbxw6v" target="_blank" class="btn">View Post</a>
       </div>
 
       <div class="card">
-        <img src="assets/Appointed as LocalOfficer.jpg" alt="Appointed as Local Officer" />
+        <img src="assets/Appointed as LocalOfficer.jpg" alt="Appointed as Local Officer">
         <h3>Appointed as Local Officer</h3>
-        <p>I was officially appointed to a local officer position, a leadership role within the church where I support youth.</p>
-        <div class="links">
-          <a href="https://www.facebook.com/100066607274501/posts/1015325694030997/?mibextid=rS40aB7S9Ucbxw6v" target="_blank" rel="noopener noreferrer">View Post</a>
-        </div>
+        <p>Officially appointed to a local officer position, a leadership role within the church where I support youth.</p>
+        <a href="https://www.facebook.com/100066607274501/posts/1015325694030997/?mibextid=rS40aB7S9Ucbxw6v" target="_blank" class="btn">View Post</a>
       </div>
 
       <div class="card">
+        <img src="assets/youngWomen f.jpg" alt="Young Women">
         <h3>Community Outreach</h3>
-          <img src="assets/youngWomen f.jpg" alt="Young Women " />
-        <p>As part of a young women's group, was part of community outreach initiative to support those in need through acts of kindness and practical assistance.</p>
-        <div class="links">
-          <a href="https://www.facebook.com/100066607274501/posts/1018439620386271/?mibextid=rS40aB7S9Ucbxw6v" target="_blank" rel="noopener noreferrer">View Post</a>
-        </div>
+        <p>Participated in a young women's group initiative to support those in need through acts of kindness and practical assistance.</p>
+        <a href="https://www.facebook.com/100066607274501/posts/1018439620386271/?mibextid=rS40aB7S9Ucbxw6v" target="_blank" class="btn">View Post</a>
       </div>
-    </div>
+    </section>
   </main>
 
   <footer>
