--- a/index.html
+++ b/index.html
@@ -90,44 +90,43 @@
     <!-- ====== CERTIFICATIONS ====== -->
     <section id="certifications" class="content-section fade-in">
       <h2>Certifications & Badges</h2>
-      <div class="certifications-grid">
+      <div class="cert-grid">
+
         <div class="cert-card">
-          <img src="assets/Cisco Badge.png" alt="Cisco Badge" />
+          <img src="assets/Cisco badge.jpeg" alt="Cisco Badge">
           <h3>Cisco Badge</h3>
           <div class="links">
             <a href="https://www.credly.com/badges/f2474d7a-ebbe-4e38-9b30-a9a2d63b1913" target="_blank">View Credential</a>
           </div>
         </div>
+
         <div class="cert-card">
-          <img src="assets/coursera.png" alt="Coursera Badge" />
+          <img src="assets/Coursera Badge.png" alt="Coursera Badge">
           <h3>Coursera Badge</h3>
           <div class="links">
             <a href="https://www.coursera.org/account/accomplishments/badge/m_KXcigST7Cyl3IoEi-w8Q" target="_blank">View Credential</a>
           </div>
         </div>
+
         <div class="cert-card">
-          <img src="assets/microsoft.png" alt="Microsoft Achievement" />
+          <img src="assets/microsoft.PNG" alt="Microsoft Achievement">
           <h3>Microsoft Achievement</h3>
           <div class="links">
             <a href="https://learn.microsoft.com/en-us/users/phumzamelindasotyantya-7552/achievements/3agemedh" target="_blank">View Credential</a>
           </div>
         </div>
+
         <div class="cert-card">
-          <img src="assets/Coursera Badge.png" alt="Coursera Verified Certificate" />
-          <h3>Coursera Verified Certificate</h3>
-          <div class="links">
-            <a href="https://www.coursera.org/account/accomplishments/verify/LQN1L3JZ7QVF" target="_blank">Verify Credential</a>
-          </div>
-        </div>
-        <div class="cert-card">
-          <img src="assets/coursera.webp" alt="Coursera Verified Badge" />
+          <img src="assets/coursera.webp" alt="Coursera Verified Badge">
           <h3>Coursera Verified Badge</h3>
           <div class="links">
             <a href="https://www.coursera.org/account/accomplishments/badge/L8UQGTIeSUyFEBk5XqIMDw" target="_blank">Verify Credential</a>
           </div>
         </div>
+
       </div>
     </section>
+
   </main>
 
   <footer>
