--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
       <a href="skills.html">Skills</a>
       <a href="beyond.html">Beyond the Code</a>
       <a href="projects.html">Projects</a>
+      <a href="experience-cert.html">Experience + Certifications</a>
       <a href="contact.html">Resume + Contact</a>
     </nav>
   </header>
@@ -32,7 +33,7 @@
       </p>
     </section>
 
-    <!-- ====== PERSONAL HIGHLIGHTS ====== -->
+    <!-- ====== QUICK HIGHLIGHTS ====== -->
     <section class="quick-highlights fade-in">
       <h3>Quick Facts</h3>
       <ul>
@@ -43,27 +44,9 @@
       </ul>
     </section>
 
-    <!-- ====== TIMELINE CARDS ====== -->
-    <section id="journey" class="content-section fade-in">
-      <h2>My Journey</h2>
-      <div class="card-grid">
-        <div class="card">
-          <h3>🎓 Education</h3>
-          <p>Diploma in Systems Development</p>
-          <p class="edu-info">Boston City Campus | 2021 – 2024</p>
-        </div>
-        <div class="card">
-          <h3>💼 Experience</h3>
-          <p>IT Support Associate @ CAPACITI</p>
-          <p class="job-info">May 2025 – Present</p>
-          <p>Peer Advisor @ Boston City College (Jan–Jun 2024)</p>
-        </div>
-        <div class="card">
-          <h3>🏅 Certifications</h3>
-          <p>Cisco, Microsoft, and Coursera Verified Achievements</p>
-          <a href="index.html#certifications" class="cv-button">View Certifications</a>
-        </div>
-      </div>
+    <!-- ====== CTA BUTTON ====== -->
+    <section class="cta-section fade-in">
+      <a href="experience-certifications.html" class="cv-button">See My Experience & Certifications</a>
     </section>
   </main>
 
