--- a/skills.html
+++ b/skills.html
@@ -15,6 +15,7 @@
       <a href="skills.html" class="active">Skills</a>
       <a href="beyond.html">Beyond the Code</a>
       <a href="projects.html">Projects</a>
+      <a href="experience-cert.html">Experience + Certifications</a>
       <a href="contact.html">Resume + Contact</a>
     </nav>
   </header>
