--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
 
     <!-- ====== CTA BUTTON ====== -->
     <section class="cta-section fade-in">
-      <a href="experience-certifications.html" class="cv-button">See My Experience & Certifications</a>
+      <a href="experience-cert.html" class="cv-button">See My Experience & Certifications</a>
     </section>
   </main>
 
