--- a/experience-cert.html
+++ b/experience-cert.html
@@ -16,6 +16,7 @@
       <a href="beyond.html">Beyond the Code</a>
       <a href="projects.html">Projects</a>
       <a href="experience-cert.html" class="active">Experience + Certifications</a>
+      <a href="contact.html">Resume + Contact</a>
     </nav>
   </header>
 
