--- a/experience-cert.html
+++ b/experience-cert.html
@@ -49,7 +49,7 @@
       <h2>Certifications & Badges</h2>
       <div class="certifications-grid">
         <div class="cert-card">
-          <img src="assets/Cisco Badge.jpeg" alt="Cisco Badge" />
+          <img src="assets/Cisco badge.jpeg" alt="Cisco Badge">
           <h3>Cisco Badge</h3>
           <div class="links">
             <a href="https://www.credly.com/badges/f2474d7a-ebbe-4e38-9b30-a9a2d63b1913" target="_blank">View Credential</a>
