--- a/index.html
+++ b/index.html
@@ -37,13 +37,15 @@
     </section>
 
     <!-- ====== QUOTE ====== -->
-    <section class="quote-section fade-in">
-      <blockquote>
-        “Innovation isn’t about what we can build — it’s about who we build it for.”
-        <span>— Phumza Sotyantya</span>
-      </blockquote>
-    </section>
-
+    <section class="quote-card fade-in">
+  <div class="quote-content">
+    <blockquote>
+      “Innovation isn’t about what we can build — it’s about who we build it for.”
+    </blockquote>
+    <span class="author">— Phumza Sotyantya</span>
+  </div>
+</section>
+    
     <!-- ====== HIGHLIGHTS ====== -->
     <section class="quick-highlights fade-in">
       <h3>What I Do</h3>
@@ -53,8 +55,7 @@
         <li>🤝 Collaborate on community tech initiatives</li>
       </ul>
     </section>
-    
-  </main>
+    </main>
 
   <footer>
     © 2025 Phumza Sotyantya
