--- a/skills.html
+++ b/skills.html
@@ -69,7 +69,7 @@
     <!-- ====== CERTIFICATION LINK ====== -->
     <section class="content-section fade-in">
       <h3>Related Achievements</h3>
-      <p>View my verified <a href="index.html#certifications">certifications and badges</a> to see proof of my learning journey.</p>
+      <p>View my verified <a href="experience-cert.html#certifications">certifications and badges</a> to see proof of my learning journey.</p>
     </section>
   </main>
 
