--- a/experience-cert.html
+++ b/experience-cert.html
@@ -73,7 +73,7 @@
           <img src="assets/coursera.webp" alt="Coursera Verified Badge" />
           <h3>Coursera Verified Badge</h3>
           <div class="links">
-            <a href="https://www.coursera.org/account/accomplishments/badge/L8UQGTIeSUyFEBk5XqIMDw" target="_blank">Verify Credential</a>
+            <a href="https://coursera.org/share/e6904f6af891d0bf22a9d436388f4fa8" target="_blank">View Credential</a>
           </div>
         </div>
       </div>
