--- a/projects.html
+++ b/projects.html
@@ -47,8 +47,8 @@
 
       <!-- Sentiment Dashboard -->
       <div class="card">
-        <img src="https://via.placeholder.com/400x200?text=Sentiment+Dashboard" alt="Sentiment Dashboard Screenshot">
-        <h3>Sentiment Dashboard</h3>
+        <img src="assets/sentimental.PNG" alt="Sentiment Analysis Dashboard">
+        <h3>Sentiment Analysis Dashboard</h3>
         <p>Real-time social sentiment analysis dashboard powered by Hugging Face models and Streamlit visualization.</p>
         <div class="tech-stack">
           <span>Python</span><span>Streamlit</span><span>Transformers</span>
@@ -60,7 +60,7 @@
 
       <!-- COMPAS Bias Audit -->
       <div class="card">
-        <img src="https://via.placeholder.com/400x200?text=COMPAS+Bias+Audit" alt="COMPAS Bias Audit">
+        <img src="assets/Bias Audit.PNG" alt="COMPAS Bias Audit">
         <h3>COMPAS Bias Audit</h3>
         <p>Auditing fairness in AI-based criminal justice algorithms to address data bias and promote transparency. Team project: <em>The Elements</em>.</p>
         <div class="tech-stack">
@@ -97,7 +97,7 @@
 
       <!-- Image Content Generator -->
       <div class="card">
-        <img src="https://via.placeholder.com/400x200?text=Content+Generator" alt="Image Content Generator">
+        <img src="assets/Image Generator.PNG" alt="Image Content Generator">
         <h3>Image Content Generator</h3>
         <p>AI tool that generates captions and descriptions for images using Gradio and Hugging Face Spaces.</p>
         <div class="tech-stack">
@@ -124,7 +124,7 @@
 
       <!-- AI Chatbot -->
       <div class="card">
-        <img src="https://via.placeholder.com/400x200?text=AI+Chatbot" alt="AI Chatbot">
+        <img src="assets/chatbot.PNG" alt="AI Chatbot">
         <h3>AI Concept Chatbot</h3>
         <p>Conversational chatbot designed for educational engagement, built on Botpress with adaptive responses.</p>
         <div class="tech-stack">
