Update image source for Resume Maker project

--- a/projects.html
+++ b/projects.html
@@ -111,7 +111,7 @@
 
       <!-- Resume Maker -->
       <div class="card">
-        <img src="https://via.placeholder.com/400x200?text=Resume+Maker" alt="Resume Maker">
+        <img src="assets/resume maker.PNG" alt="Resume Maker">
         <h3>PS Resume Maker</h3>
         <p>Smart resume generator that produces ATS-optimized templates using AI-powered text structuring.</p>
         <div class="tech-stack">
