--- a/index.html
+++ b/index.html
@@ -8,17 +8,19 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
   <style>
     :root {
-      --primary-blue: #007bff;
-      --text-dark: #222;
-      --text-light: #555;
-      --bg-light: #f9f9f9;
+      --primary-blue: #1e90ff;
+      --bg-dark: #0a0f1c;
+      --bg-light: #ffffff;
+      --text-light: #f0f4ff;
+      --text-dark: #111;
+      --nav-hover: #63b3ff;
     }
 
     body {
       font-family: 'Inter', sans-serif;
       margin: 0;
-      color: var(--text-dark);
-      background-color: var(--bg-light);
+      color: var(--text-light);
+      background-color: var(--bg-dark);
       line-height: 1.6;
     }
 
@@ -27,63 +29,106 @@
       justify-content: space-between;
       align-items: center;
       padding: 1rem 2rem;
-      background: #fff;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.05);
+      background: #0f162a;
       position: sticky;
       top: 0;
       z-index: 1000;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.4);
     }
 
     header h1 {
-      font-size: 1.25rem;
+      font-size: 1.5rem;
       color: var(--primary-blue);
       margin: 0;
     }
 
+    nav {
+      position: relative;
+    }
+
+    nav ul {
+      display: flex;
+      list-style: none;
+      margin: 0;
+      padding: 0;
+    }
+
+    nav li {
+      position: relative;
+    }
+
     nav a {
-      margin-left: 1rem;
+      display: block;
+      padding: 0.5rem 1rem;
+      color: var(--text-light);
       text-decoration: none;
-      color: var(--text-dark);
-      font-weight: 500;
+      font-weight: 600;
       transition: color 0.3s ease;
     }
 
     nav a:hover, nav a.active {
+      color: var(--nav-hover);
+    }
+
+    /* Dropdown styling */
+    nav li ul {
+      display: none;
+      position: absolute;
+      top: 100%;
+      left: 0;
+      background: #0f162a;
+      border-radius: 6px;
+      min-width: 180px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.5);
+      z-index: 100;
+    }
+
+    nav li:hover > ul {
+      display: block;
+    }
+
+    nav li ul li a {
+      padding: 0.6rem 1rem;
+      color: var(--text-light);
+    }
+
+    nav li ul li a:hover {
+      background: #1a233e;
       color: var(--primary-blue);
     }
 
     .hero {
       text-align: center;
       padding: 6rem 2rem 4rem;
-      background: linear-gradient(to bottom, #fff, #f0f6ff);
+      background: linear-gradient(to bottom, #0a0f1c, #1a233e);
     }
 
     .hero h2 {
-      font-size: 2.2rem;
+      font-size: 2.4rem;
       margin-bottom: 0.5rem;
       color: var(--primary-blue);
     }
 
     .hero p.tagline {
-      font-size: 1.1rem;
+      font-size: 1.2rem;
       color: var(--text-light);
       margin-bottom: 1.5rem;
     }
 
     .hero blockquote {
-      font-style: italic;
-      color: #333;
-      font-size: 1.1rem;
+      font-weight: bold;
+      color: var(--text-light);
+      font-size: 1.2rem;
       margin: 1rem auto;
       max-width: 600px;
       line-height: 1.5;
     }
 
-    .hero .cta-buttons {
-      margin-top: 1.5rem;
+    .cta-buttons {
+      margin-top: 2rem;
     }
 
-    .hero .cv-button {
+    .cv-button {
       display: inline-block;
       background: var(--primary-blue);
       color: #fff;
@@ -95,7 +140,7 @@
       transition: background 0.3s ease, transform 0.3s ease;
     }
 
-    .hero .cv-button:hover {
+    .cv-button:hover {
       background: #0056b3;
       transform: translateY(-3px);
     }
@@ -103,7 +148,7 @@
     .what-i-do {
       text-align: center;
       padding: 4rem 2rem;
-      background: #fff;
+      background: #0f162a;
     }
 
     .what-i-do h3 {
@@ -120,7 +165,7 @@
     }
 
     .what-i-do li {
-      background: var(--bg-light);
+      background: #1a233e;
       margin: 0.7rem 0;
       padding: 1rem;
       border-left: 4px solid var(--primary-blue);
@@ -131,20 +176,9 @@
     footer {
       text-align: center;
       padding: 1rem;
-      background: #fff;
-      border-top: 1px solid #eee;
+      background: #0f162a;
       color: var(--text-light);
       font-size: 0.9rem;
-    }
-
-    /* Optional fade-in animation */
-    .fade-in {
-      opacity: 0;
-      transform: translateY(15px);
-      animation: fadeInUp 1s forwards;
-    }
-    @keyframes fadeInUp {
-      to { opacity: 1; transform: translateY(0); }
     }
   </style>
 </head>
@@ -152,18 +186,25 @@
   <header>
     <h1>Phumza Sotyantya</h1>
     <nav>
-      <a href="index.html" class="active">Home</a>
-      <a href="about.html">About</a>
-      <a href="skills.html">Skills</a>
-      <a href="beyond.html">Beyond the Code</a>
-      <a href="projects.html">Projects</a>
-      <a href="experience-cert.html">Experience + Certificates</a>
-      <a href="contact.html">Contact</a>
+      <ul>
+        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li>
+          <a href="#">Skills ▾</a>
+          <ul>
+            <li><a href="skills.html">Technical Skills</a></li>
+            <li><a href="experience-cert.html">Experience + Certificates</a></li>
+          </ul>
+        </li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="beyond.html">Beyond the Code</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
     </nav>
   </header>
 
   <main>
-    <section class="hero fade-in">
+    <section class="hero">
       <h2>Phumza M Sotyantya</h2>
       <p class="tagline">Systems Development Graduate | IT Support | Runner | AI Enthusiast</p>
       <blockquote>“Innovation isn’t about what we can build — it’s about who we build it for.”</blockquote>
@@ -173,7 +214,7 @@
       </div>
     </section>
 
-    <section class="what-i-do fade-in">
+    <section class="what-i-do">
       <h3>What I Do</h3>
       <ul>
         <li>💡 Design user-friendly and accessible interfaces</li>
