--- a/about.html
+++ b/about.html
@@ -6,60 +6,107 @@
   <title>About Me | Phumza Sotyantya</title>
   <link rel="stylesheet" href="styles.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
-</head>
+  <style>
+    :root {
+      --primary-blue: #1e90ff;
+      --bg-dark: #0a0f1c;
+      --text-light: #f0f4ff;
+      --nav-hover: #63b3ff;
+      --card-bg: #1a233e;
+      --section-padding: 3rem 2rem;
+    }
 
-<body>
-  <header>
-    <h1>Phumza Sotyantya</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html" class="active">About</a>
-      <a href="skills.html">Skills</a>
-      <a href="beyond.html">Beyond the Code</a>
-      <a href="projects.html">Projects</a>
-      <a href="experience-cert.html">Experience + Certificates</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-  </header>
+    body {
+      font-family: 'Inter', sans-serif;
+      margin: 0;
+      color: var(--text-light);
+      background-color: var(--bg-dark);
+      line-height: 1.6;
+    }
 
-  <main>
-    <!-- ====== ABOUT SECTION ====== -->
-    <section class="hero fade-in" style="padding: 4rem 2rem; background: linear-gradient(to bottom, #fff, #f0f6ff);">
-      <h2>About Me</h2>
-      <p class="tagline" style="max-width: 700px; margin: 0 auto;">
-        I’m a <strong>Systems Development Graduate</strong> dedicated to using technology to empower communities and create inclusive digital solutions.
-      </p>
-    </section>
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1rem 2rem;
+      background: #0f162a;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.4);
+    }
 
-    <!-- ====== INTRO CARD ====== -->
-    <section class="fade-in" style="max-width: 900px; margin: 0 auto; padding: 3rem 2rem; background: #fff; border-radius: 10px; box-shadow: 0 6px 12px rgba(0,0,0,0.06);">
-      <p style="margin-bottom: 1.5rem; font-size: 1.05rem; color: #374151;">
-        With a background in <strong>Systems Development, Peer Advising, and IT Support</strong>, I’ve combined academic knowledge with real-world experience to design solutions that are both practical and people-centered.
-      </p>
-      <p style="font-size: 1.05rem; color: #374151;">
-        My passion lies in <strong>problem-solving, accessibility, and innovation</strong>—creating systems and tools that make a meaningful difference in how people connect with technology.
-      </p>
-    </section>
+    header h1 {
+      font-size: 1.5rem;
+      color: var(--primary-blue);
+      margin: 0;
+    }
 
-    <!-- ====== QUICK FACTS ====== -->
-    <section class="what-i-do fade-in" style="padding: 3rem 2rem;">
-      <h3>Quick Facts</h3>
-      <ul>
-        <li>📍 Based in Eastern Cape, South Africa</li>
-        <li>🎓 Diploma in Systems Development – Boston City Campus (2021–2024)</li>
-        <li>💻 Experience in IT Support and Peer Advising</li>
-        <li>🌟 Certified in Cisco, Microsoft, and Coursera</li>
-      </ul>
-    </section>
+    nav {
+      position: relative;
+    }
 
-    <!-- ====== CTA ====== -->
-    <section class="fade-in" style="text-align: center; padding: 2rem;">
-      <a href="experience-cert.html" class="cv-button">See My Experience & Certifications</a>
-    </section>
-  </main>
+    nav ul {
+      display: flex;
+      list-style: none;
+      margin: 0;
+      padding: 0;
+    }
 
-  <footer>
-    © 2025 Phumza Sotyantya
-  </footer>
-</body>
-</html>
+    nav li {
+      position: relative;
+    }
+
+    nav a {
+      display: block;
+      padding: 0.5rem 1rem;
+      color: var(--text-light);
+      text-decoration: none;
+      font-weight: 600;
+      transition: color 0.3s ease;
+    }
+
+    nav a:hover, nav a.active {
+      color: var(--nav-hover);
+    }
+
+    /* Dropdown styling */
+    nav li ul {
+      display: none;
+      position: absolute;
+      top: 100%;
+      left: 0;
+      background: #0f162a;
+      border-radius: 6px;
+      min-width: 180px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.5);
+      z-index: 100;
+    }
+
+    nav li:hover > ul {
+      display: block;
+    }
+
+    nav li ul li a {
+      padding: 0.6rem 1rem;
+      color: var(--text-light);
+    }
+
+    nav li ul li a:hover {
+      background: #1a233e;
+      color: var(--primary-blue);
+    }
+
+    .hero {
+      text-align: center;
+      padding: 6rem 2rem 4rem;
+      background: linear-gradient(to bottom, #0a0f1c, #1a233e);
+    }
+
+    .hero h2 {
+      font-size: 2.4rem;
+      margin-bottom: 1rem;
+      color: var(--primary-blue);
+    }
+
+    .hero p.tagline {
