Add styles and update navigation links in contact.html

--- a/contact.html
+++ b/contact.html
@@ -5,22 +5,67 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Contact | Phumza Sotyantya</title>
   <link rel="stylesheet" href="styles.css" />
+  <style>
+    /* Optional inline styles to match polished style */
+    .cv-button {
+      display: inline-block;
+      padding: 0.5rem 1rem;
+      background-color: var(--accent, #4a90e2);
+      color: #fff;
+      border-radius: 6px;
+      text-decoration: none;
+      font-weight: 500;
+      transition: background-color 0.2s;
+      margin-bottom: 2rem;
+    }
+
+    .cv-button:hover {
+      background-color: #357ab8;
+    }
+
+    .contact-info {
+      max-width: 600px;
+      margin: 0 auto;
+      text-align: center;
+      padding: 2rem 1rem;
+    }
+
+    .qr-image {
+      width: 150px;
+      height: 150px;
+      margin-bottom: 1rem;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+    }
+
+    .contact-info a {
+      color: var(--accent, #4a90e2);
+      text-decoration: none;
+      font-weight: 500;
+    }
+
+    .contact-info a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
+  <!-- ====== HEADER ====== -->
   <header>
     <h1>Contact Me</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About Me</a>
-      <a href="skills.html">Skills</a>
-      <a href="projects.html">Projects</a>
       <a href="beyond.html">Beyond the Code</a>
+      <a href="projects.html">Projects</a>
+      <a href="experience-cert.html">Experience + Skills</a>
       <a href="contact.html" class="active">Resume + Contact</a>
     </nav>
   </header>
 
+  <!-- ====== MAIN CONTENT ====== -->
   <main class="content-container">
-    <section class="download-cv-section">
+    <section class="download-cv-section" style="text-align:center; margin-top:2rem;">
       <a href="https://melinda-ps.github.io/phumza-portfolio/assets/Melinda.pdf" class="cv-button" download>
         Download My CV
       </a>
