--- a/contact.html
+++ b/contact.html
@@ -5,49 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Contact | Phumza Sotyantya</title>
   <link rel="stylesheet" href="styles.css" />
-  <style>
-    /* Optional inline styles to match polished style */
-    .cv-button {
-      display: inline-block;
-      padding: 0.5rem 1rem;
-      background-color: var(--accent, #4a90e2);
-      color: #fff;
-      border-radius: 6px;
-      text-decoration: none;
-      font-weight: 500;
-      transition: background-color 0.2s;
-      margin-bottom: 2rem;
-    }
-
-    .cv-button:hover {
-      background-color: #357ab8;
-    }
-
-    .contact-info {
-      max-width: 600px;
-      margin: 0 auto;
-      text-align: center;
-      padding: 2rem 1rem;
-    }
-
-    .qr-image {
-      width: 150px;
-      height: 150px;
-      margin-bottom: 1rem;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
-    }
-
-    .contact-info a {
-      color: var(--accent, #4a90e2);
-      text-decoration: none;
-      font-weight: 500;
-    }
-
-    .contact-info a:hover {
-      text-decoration: underline;
-    }
-  </style>
 </head>
 <body>
   <!-- ====== HEADER ====== -->
@@ -75,14 +32,14 @@
       <h2>Contact Information</h2>
 
       <!-- LinkedIn QR Code -->
-      <div class="linkedin-qr">
+      <div class="linkedin-qr" style="text-align:center; margin-top:1rem;">
         <a href="https://za.linkedin.com/in/phumza-sotyantya-44929427a" target="_blank" rel="noopener noreferrer">
-          <img src="assets/linkedin_qr.png" alt="LinkedIn QR Code" class="qr-image">
+          <img src="assets/linkedin_qr.png" alt="LinkedIn QR Code" class="qr-image" style="width:150px; height:150px; border-radius:12px;">
         </a>
       </div>
 
       <!-- LinkedIn Profile Link -->
-      <p>LinkedIn: <a href="https://za.linkedin.com/in/phumza-sotyantya-44929427a" target="_blank" rel="noopener noreferrer">View My LinkedIn</a></p>
+      <p style="text-align:center; margin-top:1rem;">LinkedIn: <a href="https://za.linkedin.com/in/phumza-sotyantya-44929427a" target="_blank" rel="noopener noreferrer">View My LinkedIn</a></p>
     </section>
   </main>
 
