--- a/beyond.html
+++ b/beyond.html
@@ -11,20 +11,21 @@
   <header>
     <h1>Beyond the Code</h1>
     <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About Me</a>
-      <a href="beyond.html" class="active">Beyond the Code</a>
-      <a href="projects.html">Projects</a>
-      <a href="experience-cert.html">Experience + Skills</a>
-      <a href="contact.html">Resume + Contact</a>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About Me</a></li>
+        <li><a href="beyond.html" class="active">Beyond the Code</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="experience-cert.html">Experience + Skills</a></li>
+        <li><a href="contact.html">Resume + Contact</a></li>
+      </ul>
     </nav>
   </header>
 
-  <!-- ====== MAIN CONTENT ====== -->
   <main class="content-container">
     <section class="hero fade-in">
       <h2>Life Beyond the Code</h2>
-      <p>In addition to my work in technology, I actively serve as a Youth Leader at <strong>The Salvation Army, Mdantsane Corps</strong>. This role has provided me with meaningful leadership and community engagement experiences.</p>
+      <p>In addition to my work in technology, I serve as a Youth Leader at <strong>The Salvation Army, Mdantsane Corps</strong>. This role has provided me with meaningful leadership and community engagement experiences.</p>
     </section>
 
     <section class="cards-grid fade-in">
@@ -49,7 +50,7 @@
       <div class="card">
         <img src="assets/Appointed as LocalOfficer.jpg" alt="Appointed as Local Officer">
         <h3>Appointed as Local Officer</h3>
-        <p>I was officially appointed to a local officer position, a leadership role within the church where I support youth.</p>
+        <p>I was appointed to a local officer position, a leadership role within the church where I support youth.</p>
         <div class="links">
           <a href="https://www.facebook.com/100066607274501/posts/1015325694030997/" target="_blank" rel="noopener noreferrer">View Post</a>
         </div>
