Refactor navigation to use unordered list

--- a/contact.html
+++ b/contact.html
@@ -11,16 +11,17 @@
   <header>
     <h1>Contact Me</h1>
     <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About Me</a>
-      <a href="beyond.html">Beyond the Code</a>
-      <a href="projects.html">Projects</a>
-      <a href="experience-cert.html">Experience + Skills</a>
-      <a href="contact.html" class="active">Resume + Contact</a>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About Me</a></li>
+        <li><a href="beyond.html">Beyond the Code</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <li><a href="experience-cert.html">Experience + Skills</a></li>
+        <li><a href="contact.html" class="active">Resume + Contact</a></li>
+      </ul>
     </nav>
   </header>
 
-  <!-- ====== MAIN CONTENT ====== -->
   <main class="content-container">
     <section class="download-cv-section" style="text-align:center; margin-top:2rem;">
       <a href="https://melinda-ps.github.io/phumza-portfolio/assets/Melinda.pdf" class="cv-button" download>
@@ -31,15 +32,15 @@
     <section class="contact-info">
       <h2>Contact Information</h2>
 
-      <!-- LinkedIn QR Code -->
       <div class="linkedin-qr" style="text-align:center; margin-top:1rem;">
         <a href="https://za.linkedin.com/in/phumza-sotyantya-44929427a" target="_blank" rel="noopener noreferrer">
           <img src="assets/linkedin_qr.png" alt="LinkedIn QR Code" class="qr-image" style="width:150px; height:150px; border-radius:12px;">
         </a>
       </div>
 
-      <!-- LinkedIn Profile Link -->
-      <p style="text-align:center; margin-top:1rem;">LinkedIn: <a href="https://za.linkedin.com/in/phumza-sotyantya-44929427a" target="_blank" rel="noopener noreferrer">View My LinkedIn</a></p>
+      <p style="text-align:center; margin-top:1rem;">
+        LinkedIn: <a href="https://za.linkedin.com/in/phumza-sotyantya-44929427a" target="_blank" rel="noopener noreferrer">View My LinkedIn</a>
+      </p>
     </section>
   </main>
 
