--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
       <h3>Quick Facts</h3>
       <ul>
         <li>📍 Based in Eastern Cape, South Africa</li>
-        <li>🎓 Diploma in Systems Development – Boston City Campus (2021–2024)</li>
+        <li>🎓 Diploma in Systems Development – Boston City Campus </li>
         <li>💻 Experience in IT Support and Peer Advising</li>
         <li>🌟 Cisco, Microsoft, and Coursera Certified</li>
       </ul>
