Update certification titles in experience-cert.html

--- a/experience-cert.html
+++ b/experience-cert.html
@@ -83,12 +83,12 @@
       <div class="certifications-grid">
         <div class="cert-card">
           <img src="assets/Cisco badge.jpeg" alt="Cisco Badge" />
-          <h4>Cisco Networking & Cybersecurity</h4>
+          <h4>Cisco IT Support Basics </h4>
           <a href="https://www.credly.com/badges/f2474d7a-ebbe-4e38-9b30-a9a2d63b1913" target="_blank">View Credential</a>
         </div>
         <div class="cert-card">
           <img src="assets/Coursera Badge.png" alt="Coursera Badge" />
-          <h4>Coursera IT Support Professional</h4>
+          <h4>Coursera Professional Development </h4>
           <a href="https://www.coursera.org/account/accomplishments/badge/m_KXcigST7Cyl3IoEi-w8Q" target="_blank">View Credential</a>
         </div>
         <div class="cert-card">
@@ -98,7 +98,7 @@
         </div>
         <div class="cert-card">
           <img src="assets/coursera.webp" alt="Coursera Verified Badge" />
-          <h4>Coursera Verified Certificate</h4>
+          <h4>Coursera IT Support</h4>
           <a href="https://coursera.org/share/e6904f6af891d0bf22a9d436388f4fa8" target="_blank">View Credential</a>
         </div>
       </div>
