--- a/beyond.html
+++ b/beyond.html
@@ -25,7 +25,7 @@
   <main class="content-container">
     <section class="hero fade-in">
       <h2>Life Beyond the Code</h2>
-      <p>In addition to my work in technology, I serve as a Youth Leader at <strong>The Salvation Army, Mdantsane Corps</strong>. This role has provided me with meaningful leadership and community engagement experiences.</p>
+      <p>In addition to my work in technology, I serve as a Youth Leader at <strong>TSA.</strong>. This role has provided me with meaningful leadership and community engagement experiences.</p>
     </section>
 
     <section class="cards-grid fade-in">
