--- a/index.html
+++ b/index.html
@@ -2,50 +2,86 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Home | Phumza Sotyantya</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Phumza Sotyantya | Portfolio</title>
   <link rel="stylesheet" href="styles.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
 </head>
+<body>
 
-<body class="home-page">
-  <header>
-    <h1>Phumza Sotyantya</h1>
+  <!-- NAVIGATION -->
+  <header class="navbar">
+    <h1 class="logo">Phumza Sotyantya</h1>
     <nav>
       <ul>
         <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="about.html">About Me</a></li>
         <li><a href="projects.html">Projects</a></li>
-        <li><a href="experience-cert.html">Experience + Skills</a></li>
-        <li><a href="beyond.html">Beyond the Code</a></li>
-        <li><a href="contact.html">Resume + Contact</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="experience-cert.html">Skills</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
 
-  <main>
-    <section class="hero">
-      <h2>Phumza M Sotyantya</h2>
-      <p class="tagline">Systems Development Graduate | IT Support | Runner | AI Enthusiast</p>
-      <blockquote>“Innovation isn’t about what we can build — it’s about who we build it for.”</blockquote>
-      <div class="cta-buttons">
-        <a href="projects.html" class="cv-button">View My Work</a>
-        <a href="contact.html" class="cv-button">Get in Touch</a>
+  <!-- HERO -->
+  <section class="hero">
+    <h2 class="fade-in">Systems Development Graduate & IT Support Specialist</h2>
+    <p class="tagline fade-in">Helping people and institutions through practical technology solutions.</p>
+    <blockquote class="fade-in">“Innovation isn’t about what we can build — it’s about who we build it for.”</blockquote>
+    <div class="hero-buttons fade-in">
+      <a href="projects.html" class="cv-button">View Projects</a>
+      <a href="contact.html" class="cv-button">Contact Me</a>
+    </div>
+  </section>
+
+  <!-- FEATURED PROJECTS -->
+  <section class="projects-preview">
+    <h3>Featured Projects</h3>
+    <div class="projects-grid">
+      <div class="card fade-in">
+        <h4>Device Deployment Support</h4>
+        <p>Supported university device rollout and setup processes.</p>
       </div>
-    </section>
+      <div class="card fade-in">
+        <h4>Graduation Ticketing System</h4>
+        <p>Assisted system operations and user support services.</p>
+      </div>
+      <div class="card fade-in">
+        <h4>AI Learning Projects</h4>
+        <p>Exploring AI tools and digital solutions.</p>
+      </div>
+    </div>
+  </section>
 
-    <section class="what-i-do">
-      <h3>What I Do</h3>
-      <ul>
-        <li> Design user-friendly and accessible interfaces</li>
-        <li> Promote inclusive, impactful tech solutions</li>
-        <li> Collaborate on community tech initiatives</li>
-      </ul>
-    </section>
-  </main>
+  <!-- SKILLS -->
+  <section class="skills-preview">
+    <h3>Core Skills</h3>
+    <div class="skills fade-in">
+      <span>ICT Support</span>
+      <span>Troubleshooting</span>
+      <span>SQL</span>
+      <span>Device Setup</span>
+      <span>Documentation</span>
+      <span>Microsoft Office</span>
+    </div>
+  </section>
 
+  <!-- ABOUT PREVIEW -->
+  <section class="about-preview fade-in">
+    <p>Systems Development graduate completing workplace experience at Nelson Mandela University. Passionate about accessible technology and problem solving.</p>
+    <a href="about.html" class="cv-button">Learn More About Me</a>
+  </section>
+
+  <!-- CONTACT CTA -->
+  <section class="contact-cta fade-in">
+    <h3>Let’s Work Together</h3>
+    <a href="contact.html" class="cv-button">Get In Touch</a>
+  </section>
+
+  <!-- FOOTER -->
   <footer>
     © 2025 Phumza Sotyantya
   </footer>
+
 </body>
 </html>
