Refactor about.html for improved structure and clarity

--- a/about.html
+++ b/about.html
@@ -9,56 +9,61 @@
 </head>
 
 <body>
-  <header>
-    <h1>Phumza Sotyantya</h1>
+
+  <!-- NAVIGATION -->
+  <header class="navbar">
+    <h1 class="logo">Phumza Sotyantya</h1>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html" class="active">About</a></li>
         <li><a href="projects.html">Projects</a></li>
-        <li><a href="experience-cert.html">Experience + Skills</a></li>
-        <li><a href="beyond.html">Beyond the Code</a></li>
-        <li><a href="contact.html">Resume + Contact</a></li>
+        <li><a href="experience-cert.html">Skills</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
 
-  <main>
-    <section class="hero">
-      <h2>About Me</h2>
-      <p class="tagline">
-        I’m a <strong>Systems Development Graduate</strong> dedicated to using technology to empower communities and create inclusive digital solutions.
+  <!-- HERO -->
+  <section class="hero fade-in">
+    <h2>About Me</h2>
+    <p class="tagline">
+      I’m a <strong>Systems Development Graduate</strong> dedicated to using technology to empower communities and create inclusive digital solutions.
+    </p>
+  </section>
+
+  <!-- ABOUT CONTENT -->
+  <section class="content-section fade-in">
+    <div class="card">
+      <p>
+        With a background in <strong>Systems Development, Peer Advising, and IT Support</strong>, I’ve combined academic knowledge with real-world experience to design solutions that are both practical and people-centered.
       </p>
-    </section>
+      <p>
+        My passion lies in <strong>problem-solving, accessibility, and innovation</strong> — creating systems and tools that make a meaningful difference in how people connect with technology.
+      </p>
+    </div>
+  </section>
 
-    <section class="content-section">
-      <div class="card">
-        <p>
-          With a background in <strong>Systems Development, Peer Advising, and IT Support</strong>, I’ve combined academic knowledge with real-world experience to design solutions that are both practical and people-centered.
-        </p>
-        <p>
-          My passion lies in <strong>problem-solving, accessibility, and innovation</strong> — creating systems and tools that make a meaningful difference in how people connect with technology.
-        </p>
-      </div>
-    </section>
+  <!-- QUICK FACTS -->
+  <section class="what-i-do fade-in">
+    <h3>Quick Facts</h3>
+    <ul>
+      <li>📍 Based in Eastern Cape, South Africa</li>
+      <li>🎓 Diploma in Systems Development – Boston City Campus</li>
+      <li>💻 Experience in IT Support and Peer Advising</li>
+      <li>🌟 Cisco, Microsoft, and Coursera Certified</li>
+    </ul>
+  </section>
 
-    <section class="what-i-do">
-      <h3>Quick Facts</h3>
-      <ul>
-        <li>📍 Based in Eastern Cape, South Africa</li>
-        <li>🎓 Diploma in Systems Development – Boston City Campus </li>
-        <li>💻 Experience in IT Support and Peer Advising</li>
-        <li>🌟 Cisco, Microsoft, and Coursera Certified</li>
-      </ul>
-    </section>
+  <!-- CTA -->
+  <section class="contact-cta fade-in" style="padding: 2rem; text-align: center;">
+    <a href="experience-cert.html" class="cv-button">See My Experience & Certifications</a>
+  </section>
 
-    <section style="text-align: center; padding: 2rem;">
-      <a href="experience-cert.html" class="cv-button">See My Experience & Certifications</a>
-    </section>
-  </main>
-
+  <!-- FOOTER -->
   <footer>
     © 2025 Phumza Sotyantya
   </footer>
+
 </body>
 </html>
