--- a/experience-cert.html
+++ b/experience-cert.html
@@ -25,7 +25,7 @@
 
   <main>
     <!-- ===== INTRO ===== -->
-    <section class="hero">
+    <section class="hero fade-in">
       <h2>Experience, Skills & Certifications</h2>
       <p class="tagline">
         Combining technical expertise, academic training, and real-world experience to create solutions that make technology more human, inclusive, and impactful.
@@ -33,10 +33,24 @@
     </section>
 
     <!-- ===== PROFESSIONAL EXPERIENCE ===== -->
-    <section class="content-section">
+    <section class="content-section fade-in">
       <h3>Professional Experience</h3>
       <div class="cards-grid">
-        <div class="card">
+
+        <!-- EXPERIENCE ADDED -->
+        <div class="card fade-in">
+          <h4>ICT Intern </h4>
+          <p class="job-info"><strong>Nelson Mandela University</strong> | Nov 2025 – Mar 2026</p>
+          <ul>
+            <li>Supported ICT users, assisted with student device deployment.</li>
+            <li>Involved in development-related project (web application).</li>
+             <li>Assisted with the Graduation (Summer) Ticketing system, ensuring accuracy and proper allocation.</li>
+              <li>Assisted in the lab during registration period by setting up printers on desktops.</li>
+          </ul>
+        </div>
+
+        <!-- EXPERIENCE -->
+        <div class="card fade-in">
           <h4>IT Support Associate</h4>
           <p class="job-info"><strong>CAPACITI</strong> | Gqeberha, Eastern Cape — May 2025 – Present</p>
           <ul>
@@ -45,20 +59,20 @@
           </ul>
         </div>
 
-        <div class="card">
+        <div class="card fade-in">
           <h4>Peer Advisor</h4>
           <p class="job-info"><strong>Boston City Campus</strong> | East London — Jan 2024 – Jun 2024</p>
           <ul>
            <li>Provided students with academic support and assignments to help them achieve success.</li>
-     <li>Guided new students in effectively navigating the online learning platform.</li>
-    <li>Developed and delivered guidance on using online resources, promoting digital literacy and learner independence.</li>
+           <li>Guided new students in effectively navigating the online learning platform.</li>
+           <li>Developed and delivered guidance on using online resources, promoting digital literacy and learner independence.</li>
           </ul>
         </div>
       </div>
     </section>
 
     <!-- ===== TECHNICAL SKILLS ===== -->
-    <section class="content-section">
+    <section class="content-section fade-in">
       <h3>Technical Skills</h3>
       <div class="cards-grid">
         <div class="card"><h4>Programming & Development</h4><p>Python, Java, HTML, CSS, JavaScript</p></div>
@@ -68,7 +82,7 @@
     </section>
 
     <!-- ===== PROFESSIONAL & INTERPERSONAL SKILLS ===== -->
-    <section class="content-section">
+    <section class="content-section fade-in">
       <h3>Professional & Interpersonal Skills</h3>
       <div class="cards-grid">
         <div class="card"><h4>Collaboration</h4><p>Teamwork, mentorship, and advising across academic and tech settings.</p></div>
@@ -78,7 +92,7 @@
     </section>
 
     <!-- ===== CERTIFICATIONS ===== -->
-    <section id="certifications" class="content-section">
+    <section id="certifications" class="content-section fade-in">
       <h3>Certifications & Achievements</h3>
       <div class="certifications-grid">
         <div class="cert-card">
@@ -105,7 +119,7 @@
     </section>
 
     <!-- ===== CTA ===== -->
-    <section class="cta-section">
+    <section class="cta-section fade-in">
       <a href="projects.html" class="cv-button">Explore My Projects</a>
     </section>
   </main>
